WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157764
REGRESSION (200035): changes in "WebKit Malloc" VM regions are causing 'leaks' to spew "Failed to map remote region" messages
https://bugs.webkit.org/show_bug.cgi?id=157764
Summary
REGRESSION (200035): changes in "WebKit Malloc" VM regions are causing 'leaks...
Geoffrey Garen
Reported
2016-05-16 15:53:08 PDT
REGRESSION (200035): changes in "WebKit Malloc" VM regions are causing 'leaks' to spew "Failed to map remote region" messages
Attachments
Patch
(4.97 KB, patch)
2016-05-16 15:57 PDT
,
Geoffrey Garen
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2016-05-16 15:57:35 PDT
Created
attachment 279058
[details]
Patch
Geoffrey Garen
Comment 2
2016-05-16 15:58:51 PDT
<
rdar://problem/26133021
>
Geoffrey Garen
Comment 3
2016-05-16 17:14:34 PDT
Committed
r200983
: <
http://trac.webkit.org/changeset/200983
>
Darin Adler
Comment 4
2016-05-22 11:33:12 PDT
Comment on
attachment 279058
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=279058&action=review
> Source/bmalloc/bmalloc/VMHeap.cpp:53 > + m_zone.addRange(Range(chunk->bytes(), size));
Great style for this in new code: m_zone.addRange({ chunk->bytes(), size }); Nice to not state the class name again, and also does tighter type checking than the old style, which is sometimes better, sometimes worse.
> Source/bmalloc/bmalloc/VMHeap.cpp:88 > + m_zone.addRange(Range(begin.address(), end.address() - begin.address()));
Ditto.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug